# SOL-logger

./: .gitignore  README.md
experiments/: analysing.ipynb  parsing.ipynb
experiments/data/: clicked_results_data.csv  raw_logs_compiled.csv  results_data.csv  session_data.csv
logger/: .gitignore  LICENSE  README.md  docker-compose.yml
logger/docs/: index.md
logger/search-app/: Dockerfile  old_Dockerfile  puzzle.py  pyproject.toml  requirements.txt  search_app.py  test.ipynb
logger/search-app/data/: uids.txt  user_topics.csv
logger/search-app/static/: logger.js  main.css
logger/search-app/templates/: end.html  error.html  home.html  layout.html  no_result.html  reward.html  search.html  start.html  task.html  webpage.html  welcome.html
logger/search-app/tests/: conftest.py  mock_server.py  test_back_navigation.py  test_bfcache_simulation.py
logger/search-engine/: .dockerignore  Dockerfile  app.py  data_preprocessing.ipynb  google.py  old_Dockerfile  requirements.txt  systems.py
logger/search-engine/index/argsme/: data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta.idx  data.properties
logger/search-engine/index/argsme_notitle/: data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta.idx  data.properties
logger/search-engine/index/commonlit/: data.direct.bf  data.document.fsarrayfile  data.inverted.bf  data.lexicon.fsomapfile  data.lexicon.fsomaphash  data.lexicon.fsomapid  data.meta-0.fsomapfile  data.meta.idx  data.meta.zdata  data.properties
logger/search-engine/index/cord19/: data.lexicon.fsomaphash  data.lexicon.fsomapid  (+1 more)
(+8 files in other folders)
