[project]
name = "search-app"
version = "0.1.0"
description = "Loggable Interactive Search Platform for research studies"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "flask-cors",
    "flask-wtf",
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "selenium>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
